--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="site-content">
-      <h1 class="site-content__headline">Another menu concept</h1>
+      <h1 class="site-content__headline">Modern Responsive Navigation</h1>
     </div>
 
     <!-- JS -->
